# Engine-2

.project/: CMakeLists.txt  main.cpp
.project/assets/levels/: 1.txt
.project/assets/textures/ui/: tracks_diagonal_demo_2.pdn
.project/assets/textures/ui/tracks/storage/: confusing.pdn  confusing2.pdn  tracks_diagonal_demo.pdn  tracks_diagonal_demo_2.pdn
.project/scenes/comic/: comic.cpp  comic.h
.project/scenes/factory/: factory.cpp  factory.h
.project/scenes/factory/items/: item.cpp  item.h  rock.cpp  rock.h
.project/scenes/factory/structures/: bouncer.cpp  bouncer.h  collector.cpp  collector.h  miner.cpp  miner.h  structure.cpp  structure.h  track.cpp  track.h  wall.cpp  wall.h
.project/scenes/game/: game.cpp  game.h  hitbox.cpp  player.cpp  player.h  server.cpp  server.h
.project/scenes/gravity/: gravity.cpp  gravity.h
.project/scenes/pathing/: pathing.cpp  pathing.h
.project/scenes/simulation/: littleGuy.cpp  littleGuy.h  simulation.cpp  simulation.h  team.cpp  team.h
.project/scenes/template/: template.cpp  template.h
.project/scenes/world/: block.cpp  block.h  cart.cpp  cart.h  railTypeData.cpp  railTypeData.h  world.cpp  world.h
core/: CMakeLists.txt
core/cobb/core/: scene.cpp  scene.h  window.cpp  window.h
core/cobb/misc/: animation.h  fontRenderer.cpp  fontRenderer.h  gameCamera.h  multiTexture2d.cpp  multiTexture2d.h  texture2d.cpp  texture2d.h
core/cobb/misc/assets/: fontRenderer.frag  multiTexture2d.frag  partialTexture2d.frag
core/cobb/shapes/: circle2d.cpp  circle2d.h  line.cpp  line.h  line2d.cpp  line2d.h  spline2d.cpp  spline2d.h
core/cobb/shapes/assets/: circle2d.frag  circle2d.vert  line2d.vert
core/ew/ewMath/: ewMath.h
